--- a/package.json
+++ b/package.json
@@ -16,6 +16,23 @@
   "dependencies": {
     "@cyclic.sh/dynamodb": "^0.0.33",
     "env-cmd": "^10.1.0",
-    "express": "^4.18.1"
+    "bcrypt": "^5.1.1",
+    "bootstrap-icons": "^1.11.2",
+    "cloudinary": "^1.41.0",
+    "cors": "^2.8.5",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "redis": "^4.6.10",
+    "socket.io": "^4.7.2",
+    "uni": "^0.0.6"
   }
 }
